--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-fauna.secret = secret
-fauna.endpoint = http://127.0.0.1:8443
+fauna.secret = fnAC2aHpH3ACB6eishDjmDrn_AFeTbkiLfOAGSy0
+fauna.endpoint = https://uscentral1-db.fauna.com:443
 fauna.ledgerdb_name = ledger_db  
